--- a/Cuisine/package.json
+++ b/Cuisine/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.3",
     "expo": "~51.0.24",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.5",
