--- a/Cuisine/package.json
+++ b/Cuisine/package.json
@@ -20,10 +20,13 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-elements": "^3.4.3",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.17.3",
     "react-native-pager-view": "^6.3.3",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
