--- a/Cuisine/package.json
+++ b/Cuisine/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.3",
     "expo": "~51.0.24",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.5",
     "react": "18.2.0",
@@ -23,12 +26,10 @@
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.17.3",
     "react-native-pager-view": "^6.3.3",
+    "react-native-password-strength-meter-bar": "^1.2.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.1.0",
-    "expo-location": "~17.0.1",
-    "expo-image-picker": "~15.0.7",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
