--- a/Cuisine/package.json
+++ b/Cuisine/package.json
@@ -29,8 +29,7 @@
     "react-native-password-strength-meter-bar": "^1.2.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.1.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
