--- a/Cuisine/package.json
+++ b/Cuisine/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -24,9 +24,11 @@
     "firebase": "^10.12.5",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-date-picker": "^5.0.4",
     "react-native-elements": "^3.4.3",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.17.3",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.3.0",
     "react-native-password-strength-meter-bar": "^1.2.0",
     "react-native-safe-area-context": "4.10.5",
